{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 9,
  "lineage": "6c226a0e-91b4-7089-7e07-ab7946f038bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cae6d6fe6048ca2c",
            "arn": "arn:aws:ec2:us-east-1:790814117414:instance/i-062826bcfeab648e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062826bcfeab648e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01a402cae44fe8dcd"
              }
            ],
            "primary_network_interface_id": "eni-01a402cae44fe8dcd",
            "private_dns": "ip-10-0-1-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.7",
            "public_ip": "54.160.73.139",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-054ab78d1ea77f5e1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04550146f33b99198",
            "tags": {
              "Name": "my_nginx server"
            },
            "tags_all": {
              "Name": "my_nginx server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05daa070623babd6e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "790814117414",
            "id": "i-062826bcfeab648e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.public_terra",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:790814117414:internet-gateway/igw-032ddf31732f3e4be",
            "id": "igw-032ddf31732f3e4be",
            "owner_id": "790814117414",
            "region": "us-east-1",
            "tags": {
              "Name": "My - terra_IGW"
            },
            "tags_all": {
              "Name": "My - terra_IGW"
            },
            "vpc_id": "vpc-0b6dd9c9c0524c205"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:790814117414:route-table/rtb-00b80d74c75c7b254",
            "id": "rtb-00b80d74c75c7b254",
            "owner_id": "790814117414",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032ddf31732f3e4be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-route-table"
            },
            "tags_all": {
              "Name": "terra-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6dd9c9c0524c205"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "790814117414",
            "id": "rtb-00b80d74c75c7b254",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2477153253a91d9",
            "region": "us-east-1",
            "route_table_id": "rtb-00b80d74c75c7b254",
            "subnet_id": "subnet-04550146f33b99198"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_route_table.route_table_public_route",
            "aws_subnet.public_terra",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:790814117414:security-group/sg-05daa070623babd6e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05daa070623babd6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251122103229860400000001",
            "name_prefix": "terraform-",
            "owner_id": "790814117414",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nginx-sg"
            },
            "tags_all": {
              "Name": "Nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6dd9c9c0524c205"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "790814117414",
            "id": "sg-05daa070623babd6e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:790814117414:subnet/subnet-0b93f4fef041471c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b93f4fef041471c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790814117414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0b6dd9c9c0524c205"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "790814117414",
            "id": "subnet-0b93f4fef041471c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:790814117414:subnet/subnet-04550146f33b99198",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04550146f33b99198",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790814117414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0b6dd9c9c0524c205"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "790814117414",
            "id": "subnet-04550146f33b99198",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:790814117414:vpc/vpc-0b6dd9c9c0524c205",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088b378b9484a61f3",
            "default_route_table_id": "rtb-0b62c8b06aaf0dc5e",
            "default_security_group_id": "sg-09b928b489971a4ea",
            "dhcp_options_id": "dopt-039485de1da90256f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b6dd9c9c0524c205",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b62c8b06aaf0dc5e",
            "owner_id": "790814117414",
            "region": "us-east-1",
            "tags": {
              "Name": "My_terra_VPC"
            },
            "tags_all": {
              "Name": "My_terra_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "790814117414",
            "id": "vpc-0b6dd9c9c0524c205",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}